cleaned up code, fixed more minor annoyances and made certain pages easier to use on mobile

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300&display=swap");
 $font-family: "Inter Tight", sans-serif;
-// TODO only implement dark mode after the website is nearing completion
 .lightMode {
     background-color: #c1c1c1;
     color: #302f30;
@@ -54,8 +53,12 @@ $font-family: "Inter Tight", sans-serif;
             align-items: flex-end;
         }
         #dropDown {
-            color: #302f30;
+            color: #171717;
             font-size: 32px;
+
+            border-radius: 1vw;
+            background-color: #646464;
+            margin-bottom: 3vw;
         }
     }
     main {
@@ -150,7 +153,7 @@ $font-family: "Inter Tight", sans-serif;
             border-radius: 5%;
             // placeholder for the colour pallette
             background-color: #ede7e3;
-            // border: 1px solid black;
+
             transition: 500ms ease-in-out;
             p {
                 padding: 2vw;
@@ -216,8 +219,8 @@ $font-family: "Inter Tight", sans-serif;
             box-shadow: 1px 5px 40px black;
         }
         .imageBoxElement > img {
-            max-width: 10vw;
-            max-height: 10vw;
+            max-width: 15vw;
+            max-height: 15vw;
         }
         .imageBoxElement > figcaption {
             text-align: center;
@@ -258,7 +261,7 @@ $font-family: "Inter Tight", sans-serif;
             max-width: 80vw;
             padding: 3vw;
             background-color: #ede7e3;
-            // border: 1px solid black;
+
             border-radius: 50px;
         }
         .experienceBlock:target {
@@ -273,19 +276,19 @@ $font-family: "Inter Tight", sans-serif;
         }
         .leftButton {
             transition: 0.5s ease-in-out;
-            font-size: 9vw;
+            font-size: 20vw;
         }
         .rightButton {
             transition: 0.5s ease-in-out;
-            font-size: 9vw;
+            font-size: 20vw;
         }
         .leftButton:hover {
             transition: 0.5s ease-in-out;
-            font-size: 10vw;
+            font-size: 25vw;
         }
         .rightButton:hover {
             transition: 0.5s ease-in-out;
-            font-size: 10vw;
+            font-size: 25vw;
         }
         h1,
         h2 {
@@ -315,7 +318,6 @@ $font-family: "Inter Tight", sans-serif;
             justify-content: center;
         }
         .terminalText {
-            //TODO : make this text scale to screen size to make sure that it fits on mobile
             align-self: center;
             color: #04f06a;
             font-size: 3vw;
@@ -421,6 +423,10 @@ $font-family: "Inter Tight", sans-serif;
         #dropDown {
             color: #c1c1c1;
             font-size: 32px;
+
+            border-radius: 1vw;
+            background-color: #757575;
+            margin-bottom: 3vw;
         }
     }
     main {
@@ -515,7 +521,7 @@ $font-family: "Inter Tight", sans-serif;
             border-radius: 5%;
             // placeholder for the colour pallette
             background-color: #171717;
-            // border: 1px solid black;
+
             transition: 500ms ease-in-out;
             p {
                 padding: 2vw;
@@ -581,14 +587,13 @@ $font-family: "Inter Tight", sans-serif;
             box-shadow: 1px 5px 40px black;
         }
         .imageBoxElement > img {
-            max-width: 10vw;
-            max-height: 10vw;
+            max-width: 15vw;
+            max-height: 15vw;
         }
         .imageBoxElement > figcaption {
             text-align: center;
             max-width: 15vw;
             padding: 5%;
-            color: #c1c1c1;
             font-size: 1rem;
             font-family: $font-family;
         }
@@ -624,7 +629,7 @@ $font-family: "Inter Tight", sans-serif;
             max-width: 80vw;
             padding: 3vw;
             background-color: #171717;
-            // border: 1px solid black;
+
             border-radius: 50px;
         }
         .experienceBlock:target {
@@ -639,19 +644,19 @@ $font-family: "Inter Tight", sans-serif;
         }
         .leftButton {
             transition: 0.5s ease-in-out;
-            font-size: 9vw;
+            font-size: 20vw;
         }
         .rightButton {
             transition: 0.5s ease-in-out;
-            font-size: 9vw;
+            font-size: 20vw;
         }
         .leftButton:hover {
             transition: 0.5s ease-in-out;
-            font-size: 10vw;
+            font-size: 25vw;
         }
         .rightButton:hover {
             transition: 0.5s ease-in-out;
-            font-size: 10vw;
+            font-size: 25vw;
         }
         h1,
         h2 {
@@ -681,7 +686,6 @@ $font-family: "Inter Tight", sans-serif;
             justify-content: center;
         }
         .terminalText {
-            //TODO : make this text scale to screen size to make sure that it fits on mobile
             align-self: center;
             color: #04f06a;
             font-size: 3vw;
