--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,8 +53,11 @@
     align-items: flex-end;
   }
   .lightMode #dropDown {
-    color: #302f30;
+    color: #171717;
     font-size: 32px;
+    border-radius: 1vw;
+    background-color: #646464;
+    margin-bottom: 3vw;
   }
 }
 .lightMode main .headText {
@@ -205,8 +208,8 @@
   box-shadow: 1px 5px 40px black;
 }
 .lightMode main .imageBoxElement > img {
-  max-width: 10vw;
-  max-height: 10vw;
+  max-width: 15vw;
+  max-height: 15vw;
 }
 .lightMode main .imageBoxElement > figcaption {
   text-align: center;
@@ -261,19 +264,19 @@
 }
 .lightMode main .leftButton {
   transition: 0.5s ease-in-out;
-  font-size: 9vw;
+  font-size: 20vw;
 }
 .lightMode main .rightButton {
   transition: 0.5s ease-in-out;
-  font-size: 9vw;
+  font-size: 20vw;
 }
 .lightMode main .leftButton:hover {
   transition: 0.5s ease-in-out;
-  font-size: 10vw;
+  font-size: 25vw;
 }
 .lightMode main .rightButton:hover {
   transition: 0.5s ease-in-out;
-  font-size: 10vw;
+  font-size: 25vw;
 }
 .lightMode main h1,
 .lightMode main h2 {
@@ -407,6 +410,9 @@
   .darkMode #dropDown {
     color: #c1c1c1;
     font-size: 32px;
+    border-radius: 1vw;
+    background-color: #757575;
+    margin-bottom: 3vw;
   }
 }
 .darkMode main .headText {
@@ -557,14 +563,13 @@
   box-shadow: 1px 5px 40px black;
 }
 .darkMode main .imageBoxElement > img {
-  max-width: 10vw;
-  max-height: 10vw;
+  max-width: 15vw;
+  max-height: 15vw;
 }
 .darkMode main .imageBoxElement > figcaption {
   text-align: center;
   max-width: 15vw;
   padding: 5%;
-  color: #c1c1c1;
   font-size: 1rem;
   font-family: "Inter Tight", sans-serif;
 }
@@ -614,19 +619,19 @@
 }
 .darkMode main .leftButton {
   transition: 0.5s ease-in-out;
-  font-size: 9vw;
+  font-size: 20vw;
 }
 .darkMode main .rightButton {
   transition: 0.5s ease-in-out;
-  font-size: 9vw;
+  font-size: 20vw;
 }
 .darkMode main .leftButton:hover {
   transition: 0.5s ease-in-out;
-  font-size: 10vw;
+  font-size: 25vw;
 }
 .darkMode main .rightButton:hover {
   transition: 0.5s ease-in-out;
-  font-size: 10vw;
+  font-size: 25vw;
 }
 .darkMode main h1,
 .darkMode main h2 {
